completed csrf Token validation function.
