# router/registerRouteInit.go
@@ -2,11 +2,17 @@ package router
 
 import (
 	"MyServer/app"
-	"MyServer/controller"
+	"MyServer/controller/adminActions"
 )
 
 func init() {
 	appInstance := app.Application()
-
-	appInstance.Router.GET("/v1", controller.LoginAction)
+	v1 := appInstance.Router.Group("v1")
+	{
+		v1.GET("getCSRF", adminActions.GetCsrfTokenAction)
+		admin := v1.Group("admin")
+		{
+			admin.GET("login", adminActions.LoginAction)
+		}
+	}
 }
